--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -51,8 +51,9 @@
     box-sizing: border-box
 }
 
+
 .p-component {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: "Source Sans Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     font-size: 1rem;
     font-weight: normal
 }
@@ -4496,6 +4497,7 @@
     margin-bottom: .3rem;
 }
 
+
 .p-card .p-card-subtitle {
     font-weight: 400;
     margin-bottom: .5rem;
@@ -4504,7 +4506,7 @@
 
 .p-card .p-card-content {
     /*padding: 1rem 0;*/
-    background: red;
+    /*background: red;*/
 }
 
 .p-card .p-card-footer {
